--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,6 @@ version = "0.1.3"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/tigerros/dry-mods"
-categories = ["development-tools", "development-tools:build-utils", "rust-patterns", "no-std", "no-std:no-alloc"]
+categories = ["development-tools", "development-tools::build-utils", "rust-patterns", "no-std", "no-std::no-alloc"]
 keywords = ["macros", "no-std", "module", "DRY", "no-alloc"]
 include = ["src", "README.md"] # Don't include examples in crate
